# ni-gen

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  readme.md
example/: advanced.c  arrays.c  calc.c  intermediate.c  multiple_ors.c  simple.c  super.c  ternary.c
src/: AST.h  ASTBuilder.h  TCLexer.g4  TCLexer.tokens  TCParser.g4  main.cpp
test/: CMakeLists.txt  readme.md
test/antlr4/runtime/Cpp/run/usr/local/share/: antlr4-demo
test/grammar/: Expr.g4  Expr.interp  ExprBaseVisitor.h  ExprLexer.cpp  ExprLexer.h  ExprParser.cpp  ExprParser.h  ExprVisitor.h
test/src/: arithmetic  main.cpp
